# rpc-stl

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  buffer.cpp  buffer.h  main-sync.cpp  main.cpp  remotely-invocable.hpp
src/: CmakeLists.txt  remotely-invocable.hpp  storage-service.cpp  storage-service.hpp
